--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,9 @@
 			  android:gravity="center_horizontal"
 			  android:paddingBottom="@dimen/activity_vertical_margin"
 			  android:paddingLeft="@dimen/activity_horizontal_margin"
+			  android:paddingStart="@dimen/activity_horizontal_margin"
 			  android:paddingRight="@dimen/activity_horizontal_margin"
+			  android:paddingEnd="@dimen/activity_horizontal_margin"
 			  android:paddingTop="@dimen/activity_vertical_margin"
 			  android:text="@string/empty_forecast_list"/>
 </FrameLayout>
