--- a/app/src/main/res/values-sw600dp-port/dimens.xml
+++ b/app/src/main/res/values-sw600dp-port/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="icon_details_size">124dp</dimen>
+	<dimen name="list_item_extra_padding">80dp</dimen>
 </resources>
