issue#21 - task1 - removed not necessary layout files with appbar

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:baselineAligned="false"
-			  android:divider="?android:attr/dividerHorizontal"
-			  android:orientation="vertical"
-			  tools:context="com.hally.sunshine.view.MainForecastActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:app="http://schemas.android.com/apk/res-auto"
+				xmlns:tools="http://schemas.android.com/tools"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				tools:context="com.hally.sunshine.view.MainForecastActivity">
 
-	<!-- This layout is a two-pane layout for the Items master/detail flow. -->
+	<!-- If set eveluation to other value than 0dp the detail_container cannot be placed above blue area -->
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:elevation="@dimen/appbar_elevation"
+		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+		app:theme="@style/SunshineToolBar">
+
+		<TextView android:id="@+id/txt_title"
+				  style="@style/TitleActionBar"
+				  android:layout_width="wrap_content"
+				  android:layout_height="?attr/actionBarSize"
+				  android:layout_gravity="center"
+				  android:layout_marginTop="?attr/actionBarSize"
+				  android:gravity="center_vertical|bottom"
+				  android:text="@string/app_name"/>
+	</android.support.v7.widget.Toolbar>
+
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/details_app_bar_overlap"
+		android:layout_below="@id/toolbar"
+		android:elevation="@dimen/appbar_elevation"
+		android:background="@color/primary"/>
 
 	<!-- We will use a dynamic fragment in container since for vertical layout we do not need
-	details from the right side-->
+	 details from the right side-->
 	<FrameLayout android:id="@+id/detail_container"
 				 android:layout_width="match_parent"
-				 android:layout_height="0dp"
-				 android:layout_weight="1"/>
+				 android:layout_height="wrap_content"
+				 android:layout_below="@id/toolbar"
+				 android:elevation="@dimen/appbar_elevation"
+				 android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+				 android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+		/>
 
 	<!-- A static fragment -->
 	<fragment android:id="@+id/fragment_main"
 			  android:name="com.hally.sunshine.view.MainForecastFragment"
 			  android:layout_width="match_parent"
-			  android:layout_height="0dp"
-			  android:layout_weight="1"
-			  tools:layout="@android:layout/list_content"/>
+			  android:layout_height="match_parent"
+			  android:layout_below="@id/detail_container"
+			  tools:layout="@android:layout/list_content"
+		/>
 
-</LinearLayout>
+</RelativeLayout>
