--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,7 +10,6 @@
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
-		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-		app:theme="@style/SunshineToolBar"/>
+		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 </LinearLayout>
