--- a/app/src/main/res/layout/custom_checkbox.xml
+++ b/app/src/main/res/layout/custom_checkbox.xml
@@ -5,6 +5,5 @@
 		  android:layout_height="wrap_content"
 		  android:button="@drawable/checkbox_selector"
 		  android:clickable="false"
-		  android:focusable="false"
-		 >
+		  android:focusable="false">
 </CheckBox>
