--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,6 +4,12 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:background="@android:color/white" />
+
 	<!-- Main content: art, weather, low and high temp -->
 	<include layout="@layout/grid_detail_today"
 			 android:layout_width="match_parent"
