--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,12 @@
 	<color name="txt_primary">#ff313131</color>
 	<color name="txt_secondary">#646464</color>
 	<color name="txt_tertiary">#858EA5</color>
-	<!-- blue palette -->
-	<color name="primary_light">#ff64c2f4</color>
-	<color name="primary">#ff1ca8f4</color>
-	<color name="primary_dark">#0288D1</color>
 	<!-- our detail accent colors -->
 	<color name="detail_accent_pane_background">#455A64</color>
 	<color name="detail_accent_label">#90A4AE</color>
+	<!-- Material "Light Blue" Palette -->
+	<color name="primary">#03A9F4</color>
+	<color name="primary_light">#B3E5FC</color>
+	<color name="primary_dark">#0288D1</color>
+	<color name="accent">#FFD740</color>
 </resources>
