--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,8 +13,7 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentTop="true"
 		android:elevation="@dimen/appbar_elevation"
-		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-		app:theme="@style/SunshineToolBar">
+		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 		<TextView android:id="@+id/txt_title"
 				  style="@style/TitleActionBar"
