--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -5,11 +5,23 @@
 	android:layoutDirection="ltr"
 	android:orientation="horizontal">
 
-	<!-- Main content: art, weather, low and high temp -->
-	<include layout="@layout/grid_detail_today"
-			 android:layout_width="0dp"
-			 android:layout_height="match_parent"
-			 android:layout_weight="3"/>
+	<FrameLayout
+		android:layout_width="0dp"
+		android:layout_height="match_parent"
+		android:layout_weight="3">
+
+		<!-- Main content: art, weather, low and high temp -->
+		<include layout="@layout/grid_detail_today"
+				 android:layout_width="match_parent"
+				 android:layout_height="match_parent"/>
+
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:background="@android:color/transparent"
+			android:elevation="0dp"/>
+	</FrameLayout>
 
 	<!-- Humidity, wind, pressure -->
 	<include layout="@layout/detail_humidity_linear"
