--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -2,6 +2,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layoutDirection="ltr"
 	android:orientation="horizontal">
 
@@ -20,7 +21,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="@android:color/transparent"
-			android:elevation="0dp"/>
+			app:theme="@style/DetailTheme"/>
 	</FrameLayout>
 
 	<!-- Humidity, wind, pressure -->
