--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -21,7 +21,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="@android:color/transparent"
-			app:theme="@style/DetailTheme"/>
+			android:theme="@style/DetailTheme"/>
 	</FrameLayout>
 
 	<!-- Humidity, wind, pressure -->
