--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  xmlns:tools="http://schemas.android.com/tools"
 			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:orientation="vertical">
+			  android:layout_height="match_parent">
 
 	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
@@ -24,10 +22,11 @@
 	</android.support.v7.widget.Toolbar>
 
 	<fragment android:id="@+id/fragment_main"
+			  android:layout_below="@id/toolbar"
 			  android:name="com.hally.sunshine.view.MainForecastFragment"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
 			  tools:context="com.hally.sunshine.view.MainForecastFragment"
 			  tools:layout="@android:layout/list_content"/>
 
-</LinearLayout>
+</RelativeLayout>
