issue#27 - replaced framelayout by cardview

--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -48,16 +48,18 @@
 
 	<!-- We will use a dynamic fragment in container since for vertical layout we do not need
 	 details from the right side-->
-	<FrameLayout android:id="@+id/detail_container"
-				 android:layout_width="match_parent"
-				 android:layout_height="match_parent"
-				 android:layout_alignParentEnd="true"
-				 android:layout_alignParentRight="true"
-				 android:layout_marginLeft="@dimen/list_content_lands_width"
-				 android:layout_marginStart="@dimen/list_content_lands_width"
-				 android:layout_marginTop="?attr/actionBarSize"
-				 android:elevation="@dimen/appbar_elevation"
-				 android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-				 android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
-				 android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"/>
+	<android.support.v7.widget.CardView android:id="@+id/detail_container"
+										android:layout_width="match_parent"
+										android:layout_height="match_parent"
+										android:layout_alignParentEnd="true"
+										android:layout_alignParentRight="true"
+										android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+										android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
+										android:layout_marginLeft="@dimen/list_content_lands_width"
+										android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
+										android:layout_marginStart="@dimen/list_content_lands_width"
+										android:layout_marginTop="?attr/actionBarSize"
+										app:cardElevation="@dimen/detail_card_elevation"
+										app:cardPreventCornerOverlap="false"/>
+
 </RelativeLayout>
