--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,6 @@
 	<!-- The amount we want the details view to overlap the app bar -->
 	<dimen name="details_app_bar_overlap">24dp</dimen>
 	<dimen name="list_item_extra_padding">16dp</dimen>
+
+	<dimen name="detail_card_elevation">6dp</dimen>
 </resources>
