--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
 	<dimen name="list_item_extra_padding">16dp</dimen>
 
 	<dimen name="detail_card_elevation">6dp</dimen>
+	<dimen name="landscape_forecast_view_width">360dp</dimen>
 </resources>
