--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,5 +25,7 @@
 	<dimen name="list_item_extra_padding">16dp</dimen>
 
 	<dimen name="detail_card_elevation">6dp</dimen>
-	<dimen name="landscape_forecast_view_width">360dp</dimen>
+
+	<dimen name="custom_match_parent">-1dp</dimen>
+	<dimen name="landscape_forecast_view_width">@dimen/custom_match_parent</dimen>
 </resources>
