--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,21 +4,21 @@
 			 android:layout_height="match_parent"
 			 tools:context="view.MainForecastActivity">
 
-	<ListView android:id="@+id/listview_forecast"
-			  style="@style/ForecastListStyle"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:divider="@null"/>
+	<android.support.v7.widget.RecyclerView android:id="@+id/recyclerview_forecast"
+											style="@style/ForecastListStyle"
+											android:layout_width="match_parent"
+											android:layout_height="match_parent"
+											android:divider="@null"/>
 	<!--empty list-->
-	<TextView android:id="@+id/listview_no_forecast"
+	<TextView android:id="@+id/recyclerview_forecast_empty"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
 			  android:gravity="center_horizontal"
 			  android:paddingBottom="@dimen/activity_vertical_margin"
-			  android:paddingLeft="@dimen/activity_horizontal_margin"
-			  android:paddingStart="@dimen/activity_horizontal_margin"
-			  android:paddingRight="@dimen/activity_horizontal_margin"
 			  android:paddingEnd="@dimen/activity_horizontal_margin"
+			  android:paddingLeft="@dimen/activity_horizontal_margin"
+			  android:paddingRight="@dimen/activity_horizontal_margin"
+			  android:paddingStart="@dimen/activity_horizontal_margin"
 			  android:paddingTop="@dimen/activity_vertical_margin"
 			  android:text="@string/empty_forecast_list"/>
 </FrameLayout>
