--- a/app/src/main/res/layout/grid_detail_today.xml
+++ b/app/src/main/res/layout/grid_detail_today.xml
@@ -7,7 +7,7 @@
 									  android:background="@color/white"
 									  app:columnCount="2">
 
-	<android.support.v7.widget.Space app:layout_columnSpan="2"
+	<Space app:layout_columnSpan="2"
 									 app:layout_columnWeight="1"
 									 app:layout_rowWeight="1"/>
 	<!-- Header: Day, Date -->
@@ -62,7 +62,7 @@
 		app:layout_columnWeight="1"
 		tools:text="10"/>
 
-	<android.support.v7.widget.Space
+	<Space
 		app:layout_columnSpan="2"
 		app:layout_columnWeight="1"
 		app:layout_rowWeight="1"/>
